# etrobocon2023-camera-system

./: .gitignore  Makefile  README.md  copy_fig.sh  coverage.xml  create_env.sh  pyproject.toml  send_fig.sh
.github/: pull_request_template.md
.github/workflow/: ci-python.yaml
.github/workflows/: ci-python.yaml
machine_learning/models/: common.py  yolo.py
machine_learning/utils/: general.py  plots.py
scripts/: kill_official_server.sh  run_official_server.sh
src/: __init__.py  __main__.py  calculate.py  camera_id_scan.py  camera_interface.py  camera_system.py  client.py  detect_fig.py  detect_object.py  detect_objects.py  image_processing.py  official_interface.py  robo_snap.py  robocon_snap.py  train_tracker.py
src/detect_fig/: Makefile  detect.py  export.py
src/detect_fig/models/: common.py  experimental.py  yolo.py
src/detect_fig/runs/train/exp/: events.out.tfevents.1691739235.A311-Precision-3660-GPU.24268.0  opt.yaml  results.csv
src/detect_fig/utils/: __init__.py  augmentations.py  autoanchor.py  dataloaders.py  downloads.py  general.py  metrics.py  torch_utils.py
tests/: __init__.py  test_calcuate.py  test_camera_system.py  test_client.py  test_detect_fig.py  test_detect_objects.py  test_image_processing.py  test_official_interface.py  test_robo_snap.py  test_train_tracker.py
tests/testdata/: test_copy_fig.sh
video/: test1.avi
yolo/: Makefile  fig_label.yaml  label_data.yaml
yolo/models/: common.py  experimental.py  yolo.py
yolo/utils/: augmentations.py  general.py  metrics.py  plots.py  torch_utils.py
